// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPasswordPage should match default section snapshot 1`] = `
<div
  className="d-flex justify-content-center forgot-password-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <form
      className="m-0"
    >
      <div
        className="form-group"
      >
        <h3
          className="text-center mt-3"
        >
          Password assistance
        </h3>
        <p
          className="mb-4"
        >
          Please enter your log-in or recovery email address below and we will send you an email with instructions.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="forgot-password-input"
            >
              Email
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="forgot-password-input"
              name="email"
              onChange={[Function]}
              placeholder="email@domain.com"
              style={
                Object {
                  "width": "400px",
                }
              }
              type="email"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="email-invalid-feedback"
            >
              The email address you've provided isn't formatted correctly.
            </strong>
          </div>
        </div>
        <p
          className="mb-4"
        >
          The email address you used to register with edX.
        </p>
      </div>
      <button
        className="btn btn-primary submit"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        Recover my password
      </button>
    </form>
  </div>
</div>
`;

exports[`ForgotPasswordPage should match forbidden section snapshot 1`] = `
<div
  className="d-flex justify-content-center forgot-password-container"
>
  <div
    className="d-flex flex-column"
    style={
      Object {
        "width": "400px",
      }
    }
  >
    <form
      className="m-0"
    >
      <div
        className="form-group"
      >
        <h3
          className="text-center mt-3"
        >
          Password assistance
        </h3>
        <p
          className="mb-4"
        >
          Please enter your log-in or recovery email address below and we will send you an email with instructions.
        </p>
        <div
          className="alert d-flex align-items-start alert-warning mt-n2"
        >
          <div>
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-exclamation-triangle fa-w-18 mr-2"
              data-icon="exclamation-triangle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 576 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          <div>
            <span>
              Your previous request is still in progress, please try again in few moments.
            </span>
          </div>
        </div>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group"
          >
            <label
              className="h6 mr-1"
              htmlFor="forgot-password-input"
            >
              Email
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="forgot-password-input"
              name="email"
              onChange={[Function]}
              placeholder="email@domain.com"
              style={
                Object {
                  "width": "400px",
                }
              }
              type="email"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="email-invalid-feedback"
            >
              The email address you've provided isn't formatted correctly.
            </strong>
          </div>
        </div>
        <p
          className="mb-4"
        >
          The email address you used to register with edX.
        </p>
      </div>
      <button
        className="btn btn-primary submit"
        onBlur={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        type="button"
      >
        Recover my password
      </button>
    </form>
  </div>
</div>
`;
